charts/common/oidc-authservice/templates/VirtualService/doidc-authservice-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice
  namespace: istio-system
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /authservice/
      route:
        - destination:
            host: authservice.istio-system.svc.cluster.local
            port:
              number: 8080
